--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,16 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/peopleFragment">
+    app:startDestination="@id/mainFragment">
 
     <fragment
-        android:id="@+id/peopleFragment"
-        android:name="com.emilpana.directoryapp.ui.fragment.PeopleFragment"
-        android:label="@string/people_title"
-        tools:layout="@layout/fragment_people" />
-    <fragment
-        android:id="@+id/roomsFragment"
-        android:name="com.emilpana.directoryapp.ui.fragment.RoomsFragment"
-        android:label="@string/room_title"
-        tools:layout="@layout/fragment_rooms" />
+        android:id="@+id/mainFragment"
+        android:name="com.emilpana.directoryapp.ui.fragment.MainFragment"
+        tools:layout="@layout/fragment_main" />
 </navigation>
