--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="16dp"
-    android:paddingVertical="8dp">
+    android:paddingVertical="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="8dp">
 
     <ImageView
         android:id="@+id/avatar"
@@ -18,7 +19,7 @@
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="12dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/black"
@@ -34,7 +35,7 @@
         android:drawableLeft="@drawable/ic_work"
         android:drawablePadding="4dp"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="1"
         android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="@id/name"
         app:layout_constraintRight_toLeftOf="@id/arrow"
@@ -46,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_arrow_right"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/avatar" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
