--- a/app/src/main/res/layout/layout_content_placeholder.xml
+++ b/app/src/main/res/layout/layout_content_placeholder.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/title"
@@ -11,7 +14,7 @@
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_error_24px"
         android:drawablePadding="4dp"
-        android:textColor="@color/black"
+        style="@style/ErrorTitle"
         app:layout_constraintBottom_toTopOf="@+id/subtitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,7 +26,7 @@
         android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        style="@style/ErrorSubtitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
