--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -19,20 +19,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+    <View
+        android:id="@+id/colorBar"
+        android:layout_width="4dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/colorBar"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <TextView
         android:id="@+id/name"
+        style="@style/HeaderTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
+        android:layout_marginRight="16dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/black"
@@ -43,17 +53,79 @@
 
     <TextView
         android:id="@+id/jobTitle"
+        style="@style/CategoryTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
         android:drawableLeft="@drawable/ic_work"
-        android:drawablePadding="4dp"
+        android:drawablePadding="8dp"
+        android:drawableTint="@color/red"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/black"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name"
         tools:text="Job title" />
+
+    <TextView
+        android:id="@+id/email"
+        style="@style/CategoryTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:autoLink="email"
+        android:drawableLeft="@drawable/ic_email"
+        android:drawablePadding="8dp"
+        android:drawableTint="@color/red"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingVertical="8dp"
+        android:textColor="@color/black"
+        app:layout_constraintLeft_toLeftOf="@id/avatar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/avatar"
+        tools:text="Email address" />
+
+    <TextView
+        android:id="@+id/phone"
+        style="@style/CategoryTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:autoLink="phone"
+        android:drawableLeft="@drawable/ic_call"
+        android:drawablePadding="8dp"
+        android:drawableTint="@color/red"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingVertical="8dp"
+        android:textColor="@color/black"
+        app:layout_constraintLeft_toLeftOf="@id/avatar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email"
+        tools:text="Phone number" />
+
+    <TextView
+        android:id="@+id/location"
+        style="@style/CategoryTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:drawableLeft="@drawable/ic_map"
+        android:drawablePadding="8dp"
+        android:drawableTint="@color/red"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingVertical="8dp"
+        android:text="@string/see_on_map"
+        android:textColor="@color/black"
+        app:layout_constraintLeft_toLeftOf="@id/avatar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/phone" />
 
     <!-- Empty/error list placeholder -->
     <include
