--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -3,26 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingVertical="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="8dp">
+    android:layout_height="wrap_content">
+
+    <View
+        android:id="@+id/colorBar"
+        android:layout_width="4dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginLeft="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/colorBar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/name"
+        style="@style/HeaderTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
+        android:layout_marginTop="16dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/black"
         app:layout_constraintLeft_toRightOf="@+id/avatar"
         app:layout_constraintRight_toLeftOf="@id/arrow"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,11 +41,14 @@
         android:id="@+id/jobTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
         android:drawableLeft="@drawable/ic_work"
         android:drawablePadding="4dp"
+        android:drawableTint="@color/red"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/name"
         app:layout_constraintRight_toLeftOf="@id/arrow"
         app:layout_constraintTop_toBottomOf="@id/name"
@@ -46,6 +58,7 @@
         android:id="@+id/arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
         android:src="@drawable/ic_arrow_right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
