--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#C40202</color>
+    <color name="gray1">#3d3d3d</color>
+    <color name="gray2">#696969</color>
 </resources>
