--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -21,10 +21,17 @@
 
     <View
         android:id="@+id/colorBar"
-        android:layout_width="4dp"
+        android:layout_width="6dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+    <View
+        android:id="@+id/colorBar2"
+        android:layout_width="6dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <ImageView
@@ -45,7 +52,6 @@
         android:layout_marginRight="16dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/black"
         app:layout_constraintLeft_toRightOf="@+id/avatar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/avatar"
@@ -62,8 +68,7 @@
         android:drawablePadding="8dp"
         android:drawableTint="@color/red"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/black"
+        android:maxLines="2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/name"
         app:layout_constraintRight_toRightOf="parent"
@@ -84,7 +89,6 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingVertical="8dp"
-        android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="@id/avatar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/avatar"
@@ -103,7 +107,6 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingVertical="8dp"
-        android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="@id/avatar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email"
@@ -122,7 +125,6 @@
         android:maxLines="1"
         android:paddingVertical="8dp"
         android:text="@string/see_on_map"
-        android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="@id/avatar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phone" />
