--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -15,7 +15,7 @@
         android:ellipsize="end"
         android:maxLines="2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/availability"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Room name" />
 
