--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -58,7 +58,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/contactDetailsFragmentContainer"
         app:layout_constraintTop_toBottomOf="@+id/topBarrier">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -66,6 +66,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <!-- Details fragment(for large screens) -->
+    <fragment
+        android:id="@+id/contactDetailsFragmentContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:visibility="gone"
+        app:defaultNavHost="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/swipeRefresh"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/topBarrier"
+        app:navGraph="@navigation/contact_details_nav_graph"
+        tools:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/peopleProgressBar"
